<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.EditTaskActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_layout"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/purple_700">

        <TextView
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/edit_task"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_arrow_back"
            android:padding="8dp"
            android:layout_margin="8dp"
            android:fontFamily="@font/raleway"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/edit_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:inputType="text"
        android:fontFamily="@font/raleway"
        android:hint="@string/task_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textColorHint="@color/blueLight"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_layout"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edit_task_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="@id/edit_task_title"
        app:layout_constraintStart_toStartOf="@id/edit_task_title"
        app:layout_constraintTop_toBottomOf="@id/edit_task_title"
        app:layout_constraintHeight_percent="0.25"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:gravity="start"
        android:textColorHint="@color/blueLight"
        android:fontFamily="@font/raleway"
        android:background="@drawable/edit_text_bg"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:hint="@string/task_content"/>

    <TextView
        android:id="@+id/edit_task_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/edit_task_content"
        app:layout_constraintTop_toBottomOf="@id/edit_task_content"
        app:layout_constraintEnd_toEndOf="@id/edit_task_title"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:fontFamily="@font/raleway"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:hint="@string/select_date_and_time"
        android:textColorHint="@color/blueLight"
        android:drawablePadding="8dp"
        app:drawableStartCompat="@drawable/ic_calendar" />

    <LinearLayout
        android:id="@+id/editDateLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_bg"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/edit_task_title"
        app:layout_constraintStart_toStartOf="@id/edit_task_title"
        app:layout_constraintTop_toBottomOf="@id/edit_task_content">

        <TextView
            android:id="@+id/tvTimeDateTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:text="@string/time_remaining"
            android:padding="4dp"
            android:drawableStart="@drawable/ic_time"
            android:drawablePadding="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/blueLight" />

        <TextView
            android:id="@+id/tvEditTimeDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/teal_700" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"
        android:fontFamily="@font/raleway"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintTop_toBottomOf="@id/edit_task_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="32dp"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:background="@drawable/button1_bg"
        android:textColor="@color/white"
        android:fontFamily="@font/raleway"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintTop_toBottomOf="@id/edit_task_date"
        app:layout_constraintStart_toEndOf="@id/btn_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>